# SDR

sdr-agent/: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml
sdr-agent/api/: auth.py  auth_middleware.py  deps.py  hitl.py  leads.py  main.py  scheduler.py  webhook.py  workspace.py
sdr-agent/config/: icp.yaml  models.yaml  sequences.yaml
sdr-agent/db/: connection.py  leads.py  users.py  workspace_config.py
sdr-agent/evals/: eval_email.py  eval_research.py  eval_trajectory.py  golden_leads.json
sdr-agent/graph/: edges.py  state.py  supervisor.py
sdr-agent/graph/nodes/: enrichment.py  outreach.py  prospecting.py  reply_handler.py  scoring.py  sequencer.py
sdr-agent/memory/: pg_checkpointer.py  redis_store.py
sdr-agent/sdr_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdr-agent/tools/: apollo.py  base.py  clearbit.py  hubspot.py  instantly.py  tavily_search.py  unipile.py
